--- a/style.css
+++ b/style.css
@@ -97,3 +97,13 @@ body.dark {
   a:hover {
     color: #fff;
   }
+
+  .profile-pic {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+    object-fit: cover;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+  }
+  
